@@ -1,3 +1,9 @@
+20040622
+ - (dtucker) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2004/06/20 17:36:59
+     [ssh.c]
+     filter passed env vars at slave in connection sharing case; ok markus@
+
 20040620
  - (tim) [configure.ac Makefile.in] Only change TEST_SHELL on broken platforms.
 
@@ -1319,4 +1325,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3417 2004/06/20 17:37:32 tim Exp $
+$Id: ChangeLog,v 1.3418 2004/06/22 02:29:23 dtucker Exp $
